--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <h1> Create a Team of Heroes! </h1>
 
-<form> action="/"</form>
+<form action="/super-hero" method="post">
+  
+</form>
