Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -2,5 +2,5 @@
 <h1> Create a Team of Heroes! </h1>
 
 <form action="/super-hero" method="post">
-  <label for name="name"></labelfor>
+  <label for="name"></labelfor>
 </form>
