--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,5 +3,5 @@
 
 <form action="/super-hero" method="post">
   <label for="team_name">Team Name:</labelfor>
-  <input type="text" 
+  <input type="text" name="name" id="name">
 </form>
