--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -4,4 +4,7 @@
 <form action="/super-hero" method="post">
   <label for="team_name">Team Name:</labelfor>
   <input type="text" name="name" id="name">
+  <br>
+  <label for="team_motto">Team Motto:</label>
+  <input type="text" name="motto" id="motto">
 </form>
