Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,7 +3,7 @@
 
 <form action="/super-hero" method="post">
   <label for="team_name">Team Name:</labelfor>
-  <input type="text" name="name" id="name">
+  <input type="text" name="team[name]" id="name">
   <br>
   <label for="team_motto">Team Motto:</label>
   <input type="text" name="motto" id="motto">
