--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -2,9 +2,14 @@
 <h1> Create a Team of Heroes! </h1>
 
 <form action="/super-hero" method="post">
-  <label for="team_name">Team Name:</labelfor>
+  <label for="team_name">Team Name:</label>
   <input type="text" name="team[name]" id="name">
   <br>
   <label for="team_motto">Team Motto:</label>
-  <input type="text" name="motto" id="motto">
+  <input type="text" name="team[motto]" id="motto">
+  <br>
+  
+  <h2>Hero 1</h2>
+  <label for="hero_1_name">Hero's Name:</label>
+  <input type="text" name="hero"
 </form>
