--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,5 +11,5 @@
   
   <h2>Hero 1</h2>
   <label for="hero_1_name">Hero's Name:</label>
-  <input type="text" name="hero"
+  <input type="text" name=""
 </form>
