Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -12,4 +12,6 @@
   <h2>Hero 1</h2>
   <label for="hero_1_name">Hero's Name:</label>
   <input type="text" name="super_hero[name]" id="name">
+  <br>
+  <label for=""
 </form>
