--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -13,5 +13,33 @@
   <label for="hero_1_name">Hero's Name:</label>
   <input type="text" name="super_hero[name]" id="name">
   <br>
-  <label for=""
+  <label for="hero_1_power">Hero's Power:</label>
+  <input type="text" name="super_hero[power]" id="power">
+  <br>
+  <label for="hero_1_bio">Hero's Biography:</label>
+  <input type="text" name="super_hero[bio]" id="bio">
+  <br>
+  
+  <h2>Hero 2</h2>
+  <label for="hero_2_name">Hero's Name:</label>
+  <input type="text" name="super_hero[name]" id="name">
+  <br>
+  <label for="hero_2_power">Hero's Power:</label>
+  <input type="text" name="super_hero[power]" id="power">
+  <br>
+  <label for="hero_2_bio">Hero's Biography:</label>
+  <input type="text" name="super_hero[bio]" id="bio">
+  <br>
+  
+  <h2>Hero 3</h2>
+  <label for="hero_3_name">Hero's Name:</label>
+  <input type="text" name="super_hero[name]" id="name">
+  <br>
+  <label for="hero_3_power">Hero's Power:</label>
+  <input type="text" name="super_hero[power]" id="power">
+  <br>
+  <label for="hero_3_bio">Hero's Biography:</label>
+  <input type="text" name="super_hero[bio]" id="bio">
+  <br>
+  
 </form>
