Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -41,5 +41,6 @@
   <label for="hero_3_bio">Hero's Biography:</label>
   <input type="text" name="super_hero[bio]" id="bio">
   <br>
+  <input type="submit" value="Submit" id="submit">
   
 </form>
