--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <h1> Team Flatiron </h1>
 
+<div class="hero">
+  <h3>Name: <%= @hero.name %></h3>
+  <h3>Power: <%= @hero.power %></h3>
+  <h3>Biography: <%= @hero.bio %></h3>
+</div><br>
 
