--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <h1> Create a Team of Heroes! </h1>
 
-<form action="/hero" method="post">
+<form action="/super_herohero" method="post">
   <label for="team_name">Team Name:</label>
   <input type="text" name="team[name]" id="name">
   <br>
