--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,10 +3,10 @@
 
 <form action="/teams" method="post">
   <label for="team_name">Team Name:</label>
-  <input type="text" name="team[name]" id="name">
+  <input type="text" name="team[name]" id="team[name]">
   <br>
   <label for="team_motto">Team Motto:</label>
-  <input type="text" name="team[motto]" id="motto">
+  <input type="text" name="team[motto]" id="team[motto]">
   <br>
   
   <h2>Hero 1</h2>
