Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,7 +11,7 @@
   
   <h2>Hero 1</h2>
   <label for="hero_1_name">Hero's Name:</label>
-  <input type="text" name="team[members][][]" id="name">
+  <input type="text" name="team[members][][name]" id="name">
   <br>
   <label for="hero_1_power">Hero's Power:</label>
   <input type="text" name="super_hero[power]" id="power">
