--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -10,13 +10,13 @@
   <br>
   
   <h2>Hero 1</h2>
-  <label for="hero_1_name">Hero's Name:</label>
-  <input type="text" name="team[members][][name]" id="name">
+  <label for="hero1_name">Hero's Name:</label>
+  <input type="text" name="team[members][][name]" id="hero1_name">
   <br>
-  <label for="hero_1_power">Hero's Power:</label>
+  <label for="hero1_power">Hero's Power:</label>
   <input type="text" name="super_hero[power]" id="power">
   <br>
-  <label for="hero_1_bio">Hero's Biography:</label>
+  <label for="hero1_bio">Hero's Biography:</label>
   <input type="text" name="super_hero[bio]" id="bio">
   <br>
   
