Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,35 +11,35 @@
   
   <h2>Hero 1</h2>
   <label for="hero1_name">Hero's Name:</label>
-  <input type="text" name="team[members][][name]" id="hero1_name">
+  <input type="text"name="team[members][][name]" id="hero1_name">
   <br>
   <label for="hero1_power">Hero's Power:</label>
-  <input type="text" name="super_hero[power]" id="power">
+  <input type="text" name="team[members][][power]" id="hero1_power">
   <br>
   <label for="hero1_bio">Hero's Biography:</label>
-  <input type="text" name="super_hero[bio]" id="bio">
+  <input type="text" name="team[members][][bio]" id="hero1_bio">
   <br>
   
   <h2>Hero 2</h2>
-  <label for="hero_2_name">Hero's Name:</label>
-  <input type="text" name="super_hero[name]" id="name">
+  <label for="hero2_name">Hero's Name:</label>
+  <input type="text" name="team[members][][name]" id="hero2_name">
   <br>
-  <label for="hero_2_power">Hero's Power:</label>
-  <input type="text" name="super_hero[power]" id="power">
+  <label for="hero2_power">Hero's Power:</label>
+  <input type="text" name="team[members][][power]" id="hero2_power">
   <br>
-  <label for="hero_2_bio">Hero's Biography:</label>
-  <input type="text" name="super_hero[bio]" id="bio">
+  <label for="hero2_bio">Hero's Biography:</label>
+  <input type="text" name="team[members][][bio]" id="hero2_bio">
   <br>
   
   <h2>Hero 3</h2>
-  <label for="hero_3_name">Hero's Name:</label>
-  <input type="text" name="super_hero[name]" id="name">
+  <label for="hero3_name">Hero's Name:</label>
+  <input type="text" name="team[members][][name]" id="hero3_bio">
   <br>
-  <label for="hero_3_power">Hero's Power:</label>
-  <input type="text" name="super_hero[power]" id="power">
+  <label for="hero3_power">Hero's Power:</label>
+  <input type="text" name="team[members][][power]" id="hero3_power">
   <br>
-  <label for="hero_3_bio">Hero's Biography:</label>
-  <input type="text" name="super_hero[bio]" id="bio">
+  <label for="hero3_bio">Hero's Biography:</label>
+  <input type="text" name="team[members][][bio]" id="hero3_bio">
   <br>
   <input type="submit" value="Submit" id="submit">
   
