--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -10,10 +10,10 @@
   <br>
   
   <h2>Hero 1</h2>
-  <label for="hero1_name">Hero's Name:</label>
+  <label for="member1_name">Hero's Name:</label>
   <input type="text"name="team[members][][name]" id="hero1_name">
   <br>
-  <label for="hero1_power">Hero's Power:</label>
+  <label for="member1_power">Hero's Power:</label>
   <input type="text" name="team[members][][power]" id="hero1_power">
   <br>
   <label for="hero1_bio">Hero's Biography:</label>
