Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,35 +11,35 @@
   
   <h2>Hero 1</h2>
   <label for="member1_name">Hero's Name:</label>
-  <input type="text"name="team[members][][name]" id="hero1_name">
+  <input type="text"name="team[members][][name]" id="member1_name">
   <br>
   <label for="member1_power">Hero's Power:</label>
-  <input type="text" name="team[members][][power]" id="hero1_power">
+  <input type="text" name="team[members][][power]" id="member1_power">
   <br>
-  <label for="hero1_bio">Hero's Biography:</label>
-  <input type="text" name="team[members][][bio]" id="hero1_bio">
+  <label for="member1_bio">Hero's Biography:</label>
+  <input type="text" name="team[members][][bio]" id="member1_bio">
   <br>
   
   <h2>Hero 2</h2>
-  <label for="hero2_name">Hero's Name:</label>
-  <input type="text" name="team[members][][name]" id="hero2_name">
+  <label for="member2_name">Hero's Name:</label>
+  <input type="text" name="team[members][][name]" id="member2_name">
   <br>
-  <label for="hero2_power">Hero's Power:</label>
-  <input type="text" name="team[members][][power]" id="hero2_power">
+  <label for="member2_power">Hero's Power:</label>
+  <input type="text" name="team[members][][power]" id="member2_power">
   <br>
-  <label for="hero2_bio">Hero's Biography:</label>
-  <input type="text" name="team[members][][bio]" id="hero2_bio">
+  <label for="member2_bio">Hero's Biography:</label>
+  <input type="text" name="team[members][][bio]" id="member2_bio">
   <br>
   
   <h2>Hero 3</h2>
-  <label for="hero3_name">Hero's Name:</label>
-  <input type="text" name="team[members][][name]" id="hero3_bio">
+  <label for="member3_name">Hero's Name:</label>
+  <input type="text" name="team[members][][name]" id="member3_bio">
   <br>
-  <label for="hero3_power">Hero's Power:</label>
-  <input type="text" name="team[members][][power]" id="hero3_power">
+  <label for="member3_power">Hero's Power:</label>
+  <input type="text" name="team[members][][power]" id="member3_power">
   <br>
-  <label for="hero3_bio">Hero's Biography:</label>
-  <input type="text" name="team[members][][bio]" id="hero3_bio">
+  <label for="member3_bio">Hero's Biography:</label>
+  <input type="text" name="team[members][][bio]" id="member3_bio">
   <br>
   <input type="submit" value="Submit" id="submit">
   
