--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -33,7 +33,7 @@
   
   <h2>Hero 3</h2>
   <label for="member3_name">Hero's Name:</label>
-  <input type="text" name="team[members][][name]" id="member3_bio">
+  <input type="text" name="team[members][][name]" id="member3_name">
   <br>
   <label for="member3_power">Hero's Power:</label>
   <input type="text" name="team[members][][power]" id="member3_power">
