--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<h1> Create a Team of Heroes! </h1>
+<h1> Create a Team and Heroes! </h1>
 
 <form action="/teams" method="post">
   <label for="team_name">Team Name:</label>
