--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<h1> Team: <% @team.name %> </h1>
+<h1> Team: <%= @team.name %> </h1>
 
-<h2>Team Motto: <% @team.motto %> </h2>
+<h2>Team Motto: <%= @team.motto %> </h2>
 
 <% @heroes.each do |hero| %>
   <h2>Hero Name: <%= hero.name %></h2>
